<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_song"
        android:icon="@drawable/ic_song"
        android:title="@string/Audio"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_text"
        android:icon="@drawable/ic_text"
        android:title="@string/configura_es"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_anotations"
        android:title="@string/editar_perfil"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_check"
        android:icon="@drawable/ic_circle_check_outline"
        android:title="@string/copiar"
        app:showAsAction="always" />

    <item android:id="@+id/menu_sair"
        android:title="@string/sair2"
        app:showAsAction="never" />

    <item android:id="@+id/menu_details"
        android:title="@string/detalhes"
        app:showAsAction="never" />

    <item android:id="@+id/menu_search"
        android:title="@string/pesquisar2"
        app:showAsAction="never" />


</menu>