<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_notificacoes"
        android:orderInCategory="100"
        android:title="@string/notifica_es"
        app:actionLayout="@layout/custom_action_item_layout"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_notifications_black_24dp"/>

    <item
        android:id="@+id/menu_perfil"
        android:orderInCategory="100"
        android:title="@string/perfil"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_amigos"
        android:orderInCategory="100"
        android:title="@string/amigos"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_configuracoes"
        android:orderInCategory="100"
        android:title="@string/configura_es"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_logoff"
        android:orderInCategory="100"
        android:title="@string/logoff"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_sair"
        android:orderInCategory="100"
        android:title="@string/sair2"
        app:showAsAction="never"
        />


</menu>