<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.reobotetechnology.reobotegame.ui.home.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.reobotetechnology.reobotegame.ui.home.fragments.BlogFragment"
        android:label="@string/feed"
        tools:layout="@layout/fragment_blog" />


    <fragment
        android:id="@+id/navigation_graphics"
        android:name="com.reobotetechnology.reobotegame.ui.home.fragments.SearchFragment"
        android:label="@string/graphics"
        tools:layout="@layout/fragment_ranking" />

    <fragment
        android:id="@+id/navigation_ranking"
        android:name="com.reobotetechnology.reobotegame.ui.home.fragments.RankingFragment"
        android:label="@string/ranking"
        tools:layout="@layout/fragment_ranking" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.reobotetechnology.reobotegame.ui.home.fragments.ProfileFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_profile" />
</navigation>
