<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_biblia"
            android:icon="@drawable/ic_biblia"
            android:title="biblia" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_video"
            android:title="@string/blog" />

        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/ic_ranking"
            android:title="@string/ranking" />
        <item
            android:id="@+id/nav_mensagens"
            android:icon="@drawable/ic_mensagens"
            android:title="@string/mensagens" />

    </group>
</menu>
